syntax = "proto3";

package stacks;

import "crypto/common.proto";

// Represents a standard address on the Stacks blockchain
message StacksAddress {
  // The consensus serialized bytes of the Stacks address defined in
  // SIP-005.
  bytes address = 1;
}

// This type maps to the StacksBlockId in the stackslib Rust crate.
message StacksBlockId {
  crypto.Uint256 block_id = 1;
}

// The protobuf representation of the clarity::vm::types::PrincipalData
// type. It represents either a standard Stacks Address or a contract
// address.
message StacksPrincipal {
  // The consensus serialized bytes of the Stacks PrincipalData.
  bytes data = 1;
}

// The id for a transaction on the stacks blockchain.
message StacksTxid {
  crypto.Uint256 txid = 1;
}
